crates/test-files/fixtures/compile_errors/abi_encode_u256.fe
contract Foo {
    pub fn foo() {
        42.abi_encode()
    }
}
